...
        val nameWrapper = jsonObject.getAsJsonObject("name")
        val contactName = nameWrapper.get("first").asString + " " + nameWrapper.get("last").asString

        val contactEmail = jsonObject.get("email").asString

        val contactGender = when (jsonObject.get("gender").asString) {
            "male" -> "Hombre"
            "female" -> "Mujer"
            else -> "No binario"
        }

        val contactRegisterDate = DateUtil.parseDate(jsonObject.getAsJsonObject("registered").get("date").asString)

...
